2006-02-20  Geoffrey Hutchison  <ghutchis@Alumina.local>

	* ChangeLog.1.x: New file, contains changes for 1.x releases.

	* 

	* test/*: New test "harness" using Perl, if available to provide
	summary output. Yields much better summary information and sets
	BABEL_LIBDIR as needed to prevent user problems with the 2.0.0 release.

2006-02-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

        * src/formats/pdbformat.cpp: Fix PR#1368851 for PDB export with
        large coordinates. Optionally shifts coordinates if needed.

        * src/mol.h: Fix PR#1373650 -- return NULL if no coordinate array
        is available. Prevents segfault.

        * src/atom.cpp (GetResidue): Make sure to return NULL if chains
        perception fails.

        * src/chains.cpp: If only one residue is found, and it's UNK, it's
        probably not a residue, so nuke it. 

        * src/formats/mol2format.cpp: Combined with two above fixes,
        ensure atom labels are printed correctly for mol2 files. All three
        fix PR#1371789.

        * src/obconversion.cpp: Update documentation to point out
        workaround for PR#1368969 with static members of OBConversion --
        declare dummy variable to make sure LoadFormatFiles() has been called.

	* tools/obxyz.cpp: New program to allow cartesian transformations
	(translations, rotations).

2006-02-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* residue.h, residue.cpp: Move residue property definitions into
	new header to support biomolecule formats.

	* src/formats/fastaformat.cpp: New format, contributed by Sangwoo
	Shim. Resolves format request PR#902406.

	* src/formats/mdlformat.cpp: Fix possible memory leak
	with comment data and ensure comment is stored properly.
	
	* src/math/matrix3x3.cpp, src/math/matrix3x3.h,
	src/math/vector3.cpp: Fix documentation errors.

	* src/obconversion.h, src/obconversion.cpp: Add option to
	WriteString to omit any trailing whitespace. Resolves PR#1396953.
